src/scss/ui/meeti/_meeti.scss
@use "base/mixins" as m;

.meeti {
  padding: 5rem 0;
  &__nombre {
    @include m.heading;
    margin-bottom: 5rem;
  }

  &__grid {
    @include m.grid(1, 2rem);

    @include m.tablet {
      @include m.grid(3, 2rem);
    }
  }

  &__contenido {
    grid-column: 1/3;
  }

  &__texto {
    text-align: justify;
  }
}

